# ArtifyScreen

./: index.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/script/api/: zzz.ts
src/script/net/: Request.ts  YRequest.ts
src/view/About/: About.tsx
src/view/Home/: Home.tsx  sytle.css
src/view/index/: Index.tsx
