[package]
name = "artify-screen"
version = "0.1.0"
description = "“幻梦” 描绘出壁纸能营造出奇幻梦幻的视觉效果，“Pix” 是 “Pixel（像素）” 的缩写，强调壁纸的高清画质，“Wall” 代表壁纸，整体寓意这是一个提供高清、充满奇幻色彩壁纸的 app。"
authors = ["1772081518@qq.com", "杨磊"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "artify_screen_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
[target."cfg(target_os = \"macos\")".dependencies]
cocoa = "0.25"
